--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
         <item quantity="one">You have completed %d Power Hour</item>
         <item quantity="other">You have completed %d Power Hours</item>
     </plurals>
+    <string name="profile_power_hour_list_chevron">End icon for card</string>
 </resources>
