--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,23 @@
         <item quantity="other">%d points recorded this month</item>
     </plurals>
 
+    <string name="home_company_power_hour_statistics_title">BT Power Hour Statistics</string>
+    <string name="home_company_power_hour_statistics_title_today">Power Hours Completed Today</string>
+    <plurals name="home_company_power_hour_today">
+        <item quantity="one">%d Power Hour recorded today</item>
+        <item quantity="other">%d Power Hours recorded today</item>
+    </plurals>
+    <string name="home_company_power_hour_statistics_title_week">Power Hours Completed This Week</string>
+    <plurals name="home_company_power_hour_week">
+        <item quantity="one">%d Power Hour recorded this week</item>
+        <item quantity="other">%d Power Hours recorded this week</item>
+    </plurals>
+    <string name="home_company_power_hour_statistics_title_month">Power Hours Completed This Month</string>
+    <plurals name="home_company_power_hour_month">
+        <item quantity="one">%d Power Hour recorded this month</item>
+        <item quantity="other">%d Power Hours recorded this month</item>
+    </plurals>
+
 <!--    AddPowerHour fragment-->
     <string name="add_ph_workout_name_hint">Workout Name</string>
     <string name="add_ph_duration_hint">Duration (in minutes)</string>
