--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_leaderboard">Leaderboard</string>
     <string name="title_profile">Profile</string>
     <string name="title_add_power_hour">Add Power Hour</string>
+    <string name="title_edit_power_hour">Edit Power Hour</string>
     <string name="title_user_power_hour_list">Your Power Hours</string>
 
     <string name="fab_add_content">Add new Pour Hour</string>
