--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,10 @@
 <!--    PowerHourList fragment-->
     <string name="ph_list_edit_icon">Edit icon button for list item</string>
     <string name="ph_list_delete_icon">Delete icon button for list item</string>
+
+<!--    Leaderboard fragment-->
+    <string name="leaderboard_action_date_range_title">Date Range</string>
+    <string name="leaderboard_action_date_range_action_today">Today</string>
+    <string name="leaderboard_action_date_range_action_week">Week</string>
+    <string name="leaderboard_action_date_range_action_month">Month</string>
 </resources>
