--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,8 @@
     <string name="leaderboard_action_date_range_action_today">Today</string>
     <string name="leaderboard_action_date_range_action_week">Week</string>
     <string name="leaderboard_action_date_range_action_month">Month</string>
+
+    <string name="leaderboard_title_today">Leaderboard Today</string>
+    <string name="leaderboard_title_week">Leaderboard This Week</string>
+    <string name="leaderboard_title_month">Leaderboard This Month</string>
 </resources>
