--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,9 @@
     <string name="leaderboard_action_date_range_action_week">Week</string>
     <string name="leaderboard_action_date_range_action_month">Month</string>
 
+    <string name="leaderboard_title">Leaderboard</string>
     <string name="leaderboard_title_today">Leaderboard Today</string>
     <string name="leaderboard_title_week">Leaderboard This Week</string>
     <string name="leaderboard_title_month">Leaderboard This Month</string>
+    <string name="leaderboard_empty_text">No leaderboard available for the current date selection</string>
 </resources>
