--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="profile_image_description">Profile picture of the user</string>
     <string name="profile_points_subheading">Points</string>
     <string name="profile_power_hours_subheading">Power Hours</string>
-    <string name="controls_power_hour_list_text">View and edit a list of your Power Hours</string>
+    <string name="profile_controls_power_hour_list_text">View and edit a list of your Power Hours</string>
     <plurals name="profile_statistics_total_points">
         <item quantity="one">You have earned %d point</item>
         <item quantity="other">You have earned %d points</item>
@@ -68,6 +68,9 @@
         <item quantity="one">You have completed %d Power Hour</item>
         <item quantity="other">You have completed %d Power Hours</item>
     </plurals>
+    <string name="profile_account_title">Account</string>
+    <string name="profile_account_signout_subheading">Signout</string>
+    <string name="profile_account_signout_text">Signout of your account</string>
     <string name="profile_power_hour_list_chevron">End icon for card</string>
 
     <!--    PowerHourList fragment-->
